[gd_scene load_steps=3 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://ReusableUI/Log.tscn" type="PackedScene" id=2]

[node name="Root" type="Node"]
script = ExtResource( 1 )

[node name="DebugLayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Log" parent="DebugLayer" instance=ExtResource( 2 )]

[node name="PopupLayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseLayer" type="Node2D" parent="."]

[node name="GameLayer" type="Node2D" parent="."]

[node name="UILayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
